--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ aws-requests-auth = "^0.4.3"
 boto3 = "^1.16"
 
 [tool.poetry.dev-dependencies]
+bump2version = "^1.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
