--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,33 @@
 [tool.poetry]
 name = "requests-iam-session"
 version = "0.2.0"
-description = ""
+description = "AWSSession class that extends BaseUrlSession from requests and automatically authenticates through IAM."
 authors = ["Epsy Engineering <engineering@epsyhealth.com>"]
-keywords = ["library"]
+license = "MIT"
+readme = "README.md"
+homepage = "https://github.com/epsyhealth/requests-iam-session"
+repository = "https://github.com/epsyhealth/requests-iam-session"
+classifiers = [
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3 :: Only"
+]
+keywords = ["aws", "iam", "requests"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-requests = "^2.25"
-requests-toolbelt = "^0.9.1"
-aws-requests-auth = "^0.4.3"
+requests = "^2.0"
+requests-toolbelt = "^0.9"
+aws-requests-auth = "^0.4"
 boto3 = "^1.16"
 
 [tool.poetry.dev-dependencies]
 bump2version = "^1.0.1"
+black = "^21.7b0"
+isort = "^5.9.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -21,3 +35,6 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.black]
 line-length = 120
+
+[tool.isort]
+line_length = 120
